#VRML_SIM R2023b utf8
# Ths is a proto for our robot for the final project
# template language: javascript


PROTO SeeingEyeRobot [
  field SFVec3f translation 0 0 0
  field SFRotation rotation 0 0 1 0
  field SFFloat bodyMass 1
  field SFString name "robot"
  field SFString controller "<generic>"
]
{
 Robot {
   translation IS translation
   rotation IS rotation
   name IS name
   controller IS controller
    children [
    DEF ROBOT_BASE Solid {
      translation 0 0 -0.0016935350243008074
      children [
        InertialUnit {
          name "imu"
        }
        Solid {
          translation 0.28 0 -0.00999987
          rotation 0 1 0 -1.5707953071795862
          children [
            Lidar {
              translation 5.87712e-07 0 -0.05
              rotation 0 1 0 1.5708
              name "front_lidar"
            }
            Shape {
              appearance MattePaint {
                baseColor 1 1 0
              }
              geometry Capsule {
                height 0.05
                radius 0.025
              }
            }
          ]
          name "Front_Lidar_Solid"
        }
        Solid {
          translation 0.29 0 0.08
          rotation 0 1 0 -1.5707953071795862
          children [
            Shape {
              appearance MattePaint {
                baseColor 0 1 1
              }
              geometry Cylinder {
                height 0.05
                radius 0.02
              }
            }
            Camera {
              translation 0 0 -0.025
              rotation 0 1 0 1.5708
              name "front_camera"
            }
          ]
          name "Front_Camera_Solid"
        }
        Solid {
          translation 0 0 0.15
          children [
            Speaker {
            }
            Shape {
              appearance MattePaint {
                baseColor 0 0.333333 0
              }
              geometry Box {
                size 0.05 0.05 0.05
              }
            }
            GPS {
            }
          ]
          name "GPS"
        }
        HingeJoint {
          jointParameters HingeJointParameters {
            axis 0 1 0
            anchor 0.2 -0.2 -0.15
          }
          device [
            RotationalMotor {
              name "front_right_wheel"
            }
            PositionSensor {
            }
          ]
          endPoint Solid {
            translation 0.19999999999999996 -0.19999999999999996 -0.14999999999999997
            rotation 1 -7.115210411036402e-10 7.115236072191825e-10 1.5707996938995001
            children [
              DEF Wheel Shape {
                appearance MattePaint {
                  baseColor 0 0 0
                }
                geometry DEF Wheel_size Cylinder {
                  height 0.05
                  radius 0.125
                }
              }
            ]
            name "wheel_1"
            contactMaterial "InteriorWheelMat"
            boundingObject USE Wheel_size
            physics Physics {
            }
            linearVelocity 0 0 -0.31392000000000003
          }
        }
        HingeJoint {
          jointParameters HingeJointParameters {
            axis 0 1 0
            anchor 0.2 0.2 -0.15
          }
          device [
            RotationalMotor {
              name "front_left_wheel"
            }
            PositionSensor {
            }
          ]
          endPoint Solid {
            translation 0.19999999999999996 0.19999999999999996 -0.14999999999999997
            rotation 1 6.907823822076902e-10 -6.907850660799681e-10 1.5707996938995021
            children [
              USE Wheel
            ]
            name "wheel_2"
            contactMaterial "ExteriorWheelMat"
            boundingObject USE Wheel_size
            physics Physics {
            }
            linearVelocity 0 0 -0.31392000000000003
          }
        }
        HingeJoint {
          jointParameters HingeJointParameters {
            axis 0 1 0
            anchor -0.2 -0.2 -0.15
          }
          device [
            RotationalMotor {
              name "back_right_wheel"
            }
            PositionSensor {
            }
          ]
          endPoint Solid {
            translation -0.19999999999999996 -0.19999999999999996 -0.14999999999999997
            rotation 1 6.907851887432362e-10 -6.907874508072055e-10 1.570799693899499
            children [
              USE Wheel
            ]
            name "wheel_3"
            contactMaterial "ExteriorWheelMat"
            boundingObject USE Wheel_size
            physics Physics {
            }
            linearVelocity 0 0 -0.31392000000000003
          }
        }
        HingeJoint {
          jointParameters HingeJointParameters {
            axis 0 1 0
            anchor -0.2 0.2 -0.15
          }
          device [
            RotationalMotor {
              name "back_left_wheel"
            }
            PositionSensor {
            }
          ]
          endPoint Solid {
            translation -0.19999999999999996 0.19999999999999996 -0.14999999999999997
            rotation 1 -7.11525064612118e-10 7.115272037061626e-10 1.5707996938995092
            children [
              USE Wheel
            ]
            name "wheel_4"
            contactMaterial "InteriorWheelMat"
            boundingObject USE Wheel_size
            physics Physics {
            }
            linearVelocity 0 0 -0.31392000000000003
          }
        }
        HingeJoint {
          jointParameters HingeJointParameters {
            axis 0 0 1
            anchor -0.12 0 0.2
          }
          device [
            PositionSensor {
            }
            RotationalMotor {
              name "gimbal_j1_motor"
            }
          ]
          endPoint Solid {
            translation -0.12 0 0.2
            rotation 9.0249935671988e-17 0.9999999999999999 0 4.692706653739929e-06
            children [
              HingeJoint {
                jointParameters HingeJointParameters {
                  axis 0 1 0
                  anchor 0 0 0.08
                  minStop -0.52
                  maxStop 0.52
                }
                device [
                  RotationalMotor {
                    name "gimbal_j2_motor"
                  }
                  PositionSensor {
                  }
                ]
                endPoint Solid {
                  translation 0 0 0.08
                  rotation 1 0 0 1.5707999999999998
                  children [
                    Solid {
                      rotation 1 0 0 -1.5707953071795862
                      children [
                        Camera {
                          translation -0.036 0 0
                          rotation 0 0 1 3.141592653589793
                          name "RGB_camera"
                          recognitionColors [
                            0 0 0
                          ]
                          fieldOfView 1.518
                          width 640
                          height 480
                          noise 0.01
                          recognition Recognition {
                            segmentation TRUE
                          }
                        }
                        RangeFinder {
                          translation -0.035 0 0
                          rotation 0 0 1 3.141592653589793
                          name "range_finder"
                          fieldOfView 1.52
                          width 640
                          height 480
                          minRange 0.06
                          maxRange 6
                          noise 0.05
                        }
                        Shape {
                          appearance MattePaint {
                            baseColor 0 0 0
                          }
                          geometry Box {
                            size 0.07 0.18 0.04
                          }
                        }
                      ]
                      name "Depth_Camera"
                    }
                    Shape {
                      appearance MattePaint {
                        baseColor 0 0.666667 1
                      }
                      geometry Cylinder {
                        height 0.2
                        radius 0.03
                      }
                    }
                  ]
                  name "Gimbal_Joint_2"
                }
              }
              Shape {
                appearance MattePaint {
                  baseColor 0.333333 1 1
                }
                geometry Cylinder {
                  height 0.1
                  radius 0.04
                }
              }
            ]
            name "Gimbal_Joint_1"
          }
        }
        Shape {
          appearance MattePaint {
            baseColor 0.333333 0 1
          }
          geometry DEF BASE Box {
            size 0.6 0.3 0.3
          }
        }
      ]
      name "Gimbal"
      boundingObject USE BASE
      physics Physics {
      density -1
      mass IS bodyMass
      }
    }
  ]
  supervisor TRUE
  controller IS controller
}
}



